...
                ),
                10.verticalSpace,
                AddTaskField(
                  iconData: Icons.assignment_rounded,
                  controller: _taskNameController,
                  hintText: 'Enter task name',
                  labelText: 'Task name',
                  validator: (value) {
                    if (value == null || value.isEmpty) {
                      return 'Please enter a task name';
                    }
                    return null;
                  },
...
                      shape: RoundedRectangleBorder(
                        borderRadius: BorderRadius.circular(20.r),
                      ),
                    ),
                    child: Text(
                      _currentPageType == PageType.addTask
                          ? 'Create New Task'
                          : 'Save Changes',
                      style: TextStyle(
                        fontFamily: 'Optician',
                        fontSize: 16.sp,
                        fontWeight: FontWeight.w600,
                        color: Colors.white,
...
